--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,5 +6,8 @@ name = "go"
   [analyzers.meta]
   import_root = "deepsource.com/repo-name"
 
+[[analyzers]]
+name = "secrets"
+
 [[transformers]]
 name = "gofumpt"
